[tool.poetry]
name = "wgnetns"
version = "2.2.0"
description = "wg-quick for network namespaces"
authors = ["dadevel <dadevel@disroot.org>"]
license = "MIT"

[tool.poetry.scripts]
wg-netns = "wgnetns.main:main"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
